fix: Wrong widths and sizes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,13 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@plugin "@tailwindcss/typography";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 .antialiased {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 input:-webkit-autofill,
 input[data-autocompleted] {
-    background-color: transparent !important;
+  background-color: transparent !important;
 }
